perf: RAG 流式问答改用虚拟线程提升并发